--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,14 @@
 {
   "Email": "ziliyamustafina06@mail.ru",
   "Password": "1GWa6vsewxH3u3Gz99xr",
-  "FileName": "letters.json",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Letters.db"
   },
   "AllowedHosts": "*"
 }
